--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>JulyDevOpsTraining</name>
 	
-<!-- 	<properties>
-		<project.build.SourceEncoding></project.build.SourceEncoding>
+	<properties>
+		//<project.build.SourceEncoding></project.build.SourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-	</properties> -->
+	</properties>
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -17,10 +17,10 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.10.0</version>
-<!-- 					<configuration>
+					<configuration>
 						<source>${maven.compiler.source}</source>
 						<target>${maven.compiler.targer}</target>
-					</configuration> -->
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
