--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,30 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+
+<groupId>org.apache.maven.plugins</groupId>
+
+<artifactId>maven-war-plugin</artifactId>
+
+<version>3.3.1</version>
+
+</plugin>
+
+<plugin>
+
+<groupId>org.apache.maven.plugins</groupId>
+
+<artifactId>maven-compiler-plugin</artifactId>
+
+<version>3.8.1</version>
+
+</plugin>
+<!-- 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.10.0</version>
 
-				</plugin>
+				</plugin> -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
