--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,11 +20,13 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
--task: CopyFiles@2
+- task: CopyFiles@2
   inputs:
-    targetFolder: '$(Build.ArtifactStagingDirectory)'    
- 
-- task: PublishBuildArtifacts@1    
-  displayName: 'Publish Artifact: drop'
+    Contents: '**/*.war'
+    TargetFolder: '$(build.artifactstagingdirectory)'
+- task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(build.artifactstagingdirectory)'
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'dropNewWar'
+    publishLocation: 'Container'
+
