--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,9 +2,11 @@
 # Build your Java project and run tests with Apache Maven.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
+# Testing
 
 trigger:
 - master
+
 pool:
   vmImage: ubuntu-latest
 
@@ -25,6 +27,6 @@ steps:
     TargetFolder: '$(build.artifactstagingdirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(build.artifactstagingdirectory)'
-    ArtifactName: 'NewWarFile'
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'dropwarFile'
     publishLocation: 'Container'
